[package]
name = "rust_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
bytes = { version = "1.11.0", features = ["serde"] }
rand = "0.9.2"
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "ring"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "ring"] }
rustls-pemfile = "2.2.0"
uuid = { version = "1.18.1", features = ["v4"] }
socket2 = "0.6.1"
moka = { version = "0.12.11", features = ["future"] }
